<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="105dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/translate_btn"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/language_translation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_language" />

    <Button
        android:id="@+id/button38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_home_page"
        android:fontFamily="sans-serif-black"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="@string/home"
        android:textColor="@color/white"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button39"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toEndOf="@+id/button37"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/icons8_add"
        android:fontFamily="sans-serif-black"
        android:text="@string/add_player"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/button37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_game_controller_2"
        android:fontFamily="sans-serif-black"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="@string/games"
        android:textColor="@color/white"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_settings"
        android:fontFamily="sans-serif-black"

        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="@string/settings"
        android:textColor="@color/white"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/who_s_playing"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="407dp"
        android:layout_height="388dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/button40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="sans-serif-black"
            android:onClick="checkButton"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:onClick="checkButton"
            android:text="@string/female" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>