<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Games">

    <Button
        android:id="@+id/buttontof"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_true_corporation"
        android:fontFamily="sans-serif-black"
        android:text="@string/true_or_false"
        android:textColor="@color/white"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:cornerRadius="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttontof2"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_a"
        android:fontFamily="sans-serif-black"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/alias"
        android:textColor="@color/white"
        app:cornerRadius="15sp"
        app:layout_constraintStart_toEndOf="@+id/buttontof"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="412dp"
        android:layout_height="105dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_game_controller_2"
        android:fontFamily="sans-serif-black"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="@string/games"
        android:textColor="@color/white"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <Button
        android:id="@+id/button39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_settings"
        android:fontFamily="sans-serif-black"

        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="@string/settings"
        android:textColor="@color/white"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_home_page"
        android:fontFamily="sans-serif-black"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="@string/home"
        android:textColor="@color/white"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button39"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toEndOf="@+id/button37"
        tools:ignore="DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>