<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TruthOrDare">



    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="54dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_undo"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/zadanie"
        android:layout_width="338dp"
        android:layout_height="327dp"
        android:layout_margin="20dp"
        android:background="#000051"
        android:backgroundTint="#46000051"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <LinearLayout
        android:id="@+id/linearLayoutRed"
        android:layout_width="409dp"
        android:layout_height="236dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible">

        <Button
            android:id="@+id/startgame"
            android:layout_width="155dp"
            android:layout_height="74dp"
            android:layout_margin="15dp"

            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-black"
            android:text="@string/start"
            android:textColor="@color/white"
            app:cornerRadius="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDone"
        android:layout_width="409dp"
        android:layout_height="236dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible">

        <Button
            android:id="@+id/Done"
            android:layout_width="155dp"
            android:layout_height="74dp"
            android:layout_margin="15dp"

            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-black"
            android:text="@string/done"
            android:textColor="@color/white"
            app:cornerRadius="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="236dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <Button
            android:id="@+id/truth"
            android:layout_width="155dp"
            android:layout_height="74dp"

            android:layout_margin="10dp"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-black"
            android:text="@string/truth"
            android:textColor="@color/white"
            app:cornerRadius="15sp" />

        <Button
            android:id="@+id/dare"
            android:layout_width="155dp"
            android:layout_height="74dp"
            android:layout_margin="10dp"

            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-black"
            android:text="@string/dare"
            android:textColor="@color/white"
            app:cornerRadius="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/name_player"
        android:layout_width="307dp"
        android:layout_height="42dp"
        android:fontFamily="sans-serif-black"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zadanie" />




</androidx.constraintlayout.widget.ConstraintLayout>