<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Alias">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttongames"
        android:layout_width="54dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/green"
        android:drawableTop="@drawable/icons8_undo"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutBlue"
        android:layout_width="205dp"
        android:layout_height="272dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible">

        <ScrollView
            android:layout_width="157dp"
            android:layout_height="176dp"
            android:layout_marginLeft="25dp">

            <LinearLayout
                android:id="@+id/linLayBlueT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/blue"
            android:layout_width="118dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-black"
            android:text="@string/blue"
            android:textColor="@color/white"
            app:cornerRadius="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRed"
        android:layout_width="205dp"
        android:layout_height="272dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible">

        <ScrollView
            android:layout_width="157dp"
            android:layout_height="176dp"
            android:layout_marginLeft="25dp">

            <LinearLayout
                android:id="@+id/linLayRedT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/red"
            android:layout_width="118dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-black"
            android:text="@string/red"
            android:textColor="@color/white"
            app:cornerRadius="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/name_player"
        android:layout_width="307dp"
        android:layout_height="42dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif-black"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/alias_text"
        android:layout_width="340dp"
        android:layout_height="262dp"
        android:layout_margin="20dp"
        android:background="#000051"
        android:backgroundTint="#46000051"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/name_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <LinearLayout
        android:id="@+id/linearLayoutStart"
        android:layout_width="409dp"
        android:layout_height="320dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alias_text"
        tools:visibility="invisible">

        <Button
            android:id="@+id/startgame"
            android:layout_width="155dp"
            android:layout_height="74dp"
            android:layout_margin="15dp"

            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-black"
            android:text="@string/start"
            android:textColor="@color/white"
            app:cornerRadius="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutStart1"
        android:layout_width="409dp"
        android:layout_height="247dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_player"
        tools:visibility="visible">

        <Button
            android:id="@+id/startteamgame"
            android:layout_width="155dp"
            android:layout_height="74dp"
            android:layout_margin="15dp"

            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-black"
            android:text="I'm ready!"
            android:textColor="@color/white"
            android:visibility="visible"
            app:cornerRadius="15sp"
            tools:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>